themes.local/feedmei.css
@import "../themes/light.css";

@font-face {
	font-family: "PT Sans";
	src: url("feedmei/pts55f-webfont.woff") format("woff");
}
@font-face {
	font-family: "PT Sans";
	font-style: italic;
	src: url("feedmei/pts56f-webfont.woff") format("woff");
}
@font-face {
	font-family: "PT Sans";
	font-weight: bold;
	src: url("feedmei/pts75f-webfont.woff") format("woff");
}

:not(.material-icons) {
	font-family: "PT Sans" !important;
	text-rendering: optimizelegibility !important;
}
	.material-icons { filter: grayscale(100%) }
	.flat :before {
		font-family: "flat-icon" !important;
		filter: grayscale(100%);
	}

.header .collapse i.material-icons { margin-top: -10px }

#floatingTitle .collapse i.material-icons,
#floatingTitle .right img,
.header .right img,
.dijitTreeIcon i.material-icons,
.dijitTreeIcon img,
#dijit_form_ComboButton_0 .dijitReset.dijitButtonContents,
#fox_form_ComboButton_0 .dijitReset.dijitButtonContents,
.dijitReset.dijitStretch.dijitButtonContents.dijitDownArrowButton,
.ttrss_prefs :not(#notify) > i.material-icons { margin-top: -6px }

.dijitButtonContents i.material-icons,
.loadingNode,
.feed-title img,
.feed-title i.material-icons,
#feed_title i.material-icons,
.footer .left i.material-icons,
.dijitTabPaneWrapper .dijitCheckBox,
.ttrss_prefs .dijitCheckBox,
.ttrss_prefs #feedConfigTab .dijitTreeIcon img { margin-top: -5px }

i.material-icons.icon-restore { margin: -5px 0 0 -1px }

#feedTree .dijitTreeExpandoClosed,
#feedTree .dijitTreeExpandoOpened { margin: -4px -1px 0 24px }

.dijitTreeExpando,
.dijitButton .dijitButtonText { margin-top: -4px }

body.ttrss_main div.whiteBox p,
body.ttrss_main div.post div.header .row { margin-bottom: 0 }

#content-insert .header i { margin-top: 1px }

#feedTree .dijitTreeRow { margin-left: -18px }

.buttons.right { margin-right: -4px }

.content-inner figure {
	margin: 1em 0;
	text-align: center;
}

.content-inner iframe,
.content-inner img { border: 1px solid transparent !important }
	.active:not(.Unread) .content-inner iframe,
	.active:not(.Unread) .content-inner img { border: 1px solid #eee !important }

body.ttrss_main #feeds-holder,
body.ttrss_main #feeds-holder_splitter,
body.ttrss_main #content-insert_splitter,
body.ttrss_main #toolbar-frame,
body.ttrss_main #toolbar-frame #toolbar { background: #eee }

#feedlistLoading,
body.ttrss_main #feedTree .dijitTreeContainer { padding-top: 1em }
	#feedlistLoading { text-align: center }

body.ttrss_main div.whiteBox,
body.ttrss_main #headlines-spacer {
	font-size: 1em;
	padding-bottom: 1em;
}

body.ttrss_main #toolbar-frame #toolbar {
	padding: 5px 0;
	font-size: 1.1em;
}
	body.ttrss_main #toolbar-frame #toolbar span.left { padding-left: 5px }

body.ttrss_main #feeds-holder #feedTree .counterNode,
body.ttrss_main #toolbar-headlines #feed_current_unread {
	margin-top: 1px;
	background: #ddd;
	padding: .2em;
	font-size: 10.5px;
	font-weight: bold;
	color: #777;
	border: 0;
}

body.ttrss_main #feeds-holder #feedTree .counterNode.aux {
	font-weight: normal;
	color: #999;
}

body.ttrss_main #overlay_inner {
	width: 300px;
	margin: 42vh auto;
}

.flat .dijitProgressBarFull { background-color: #1f6f0f }

.dijitTreeNode .dijitTreeRow,
.dijitTreeNode .dijitTreeRowSelected,
#floatingTitle .author,
#floatingTitle .updated,
#floatingTitle .icon-score,
.flat .dijitMenuItem { color: #888 !important }

#floatingTitle {
	margin-top: -1px;
	padding-right: 4px;
}

.flat .dijitTextBoxHover,
.flat .dijitTextBoxFocused,
body.ttrss_main div#cmdline { border-color: #ccc }

#toolbar .dijitButtonNode,
#toolbar table.dijitSelect { box-shadow: none !important }

.dijitTreeNode .dijitTreeRowHover { background: rgba(222, 222, 222, .2) }

.dijitTreeNode .dijitTreeRowSelected {
	border-left-color: #eee !important;
	border-right-color: #eee !important;
}

body.ttrss_main #feeds-holder #feedTree .dijitTreeRow.Error .dijitTreeLabel { color: #a33 }

#toolbar .dijitButtonNode,
#toolbar .dijitDownArrowButton {
	color: #888;
	background: transparent !important;
}

#toolbar #dijit_form_ComboButton_0_button,
#toolbar #fox_form_ComboButton_0_button { margin: -6px -10px 0 2px }

#notify,
#floatingTitle .feed a,
#floatingTitle img.icon,
.header .feed a,
#headlines-frame .hl .feed,
#headlines-frame .dijitCheckBox,
#headlines-frame .icon,
.feed-icon img,
.feed-title img,
.header img { filter: grayscale(100%) opacity(75%) !important }

.dijitButton,
.dijitCheckBox,
.dijitComboButton { filter: grayscale(60%) opacity(100%) !important }

#headlines-frame .title:hover { text-decoration: none !important }

.ttrss_prefs .dijitTreeRow .feedParam { margin-right: 1em }

.ttrss_prefs .prefs.plugin > label { vertical-align: top }

.marked .marked-pic { filter: grayscale(100%) brightness(60%) }

body.ttrss_main i.icon-syndicate {
	margin-top: -4px;
	color: #909090;
	border-color: #909090;
}

.flat .dijitContentPane { background: #fefefe }

#header a,
.hotkeys-help .hk,
.Selected .header span,
.Selected .header a.title,
.hl.Selected > div span,
.hl.Selected > div a.title,
.content > a,
.content :not(.feed) a { color: #270 !important }
	.footer .left a { color: #444 !important }

a:hover,
#header a:hover,
.Selected a.title:hover,
.Selected span:hover,
.content > a:hover,
.content :not(.feed) a:hover,
.dijitMenuItem.dijitDisabled .dijitMenuItemLabel { color: #160 !important }

.ttrss_prefs .dijitTreeRowSelected,
.dijitMenuItemSelected td,
.dijitTreeRowSelected .filterRules li {
	color: #909090 !important;
	background-color: #eee !important;
}

body.ttrss_main .hl,
body.ttrss_main .hl.Unread,
.cdm.expandable,
.cdm.expandable.Unread,
.cdm.expandable.active { background: #fefefe !important }

body.ttrss_main .hl.active { background: #f5f5f5 !important }

body.ttrss_main #headlines-frame div.feed-title {
	margin-top: -1px;
	border-top-width: 1px;
	border-color: #ddd;
}

div.cdm { transition: all .1s linear }

div.cdm.expanded {
	margin: 1.5em;
	padding: 1em;
	color: #555;
	border: 1px solid #eee;
}

div.cdm .header[stuck] {
	opacity: 1;
	z-index: 1000;
}
	div.cdm.expandable:not(.active) .header[stuck] { border-bottom-width: 0 }
	div.cdm.expanded .header[stuck] {
		margin: 0 -200%;
		padding: 0 200%;
	}

#headlines-frame.normal,
#headlines-frame .feed-title,
#content-insert,
div.cdm.expanded.active:not(.Unread),
div.cdm.expandable.active:not(.Unread) {
	background: #f9f9f9 !important;
	color: #444;
}
	div.cdm.expanded.active:not(.Unread) { border: 1px solid #ddd }

.header .row a,
#toolbar .dijitOpened *,
#content-insert div.content,
div.cdm.active div.content,
div.cdm.expanded.active div.header a.title,
div.cdm.expandable.active div.header a.title,
body.ttrss_main .hl.active :not(i),
body.ttrss_main .hl.active .feed a,
body.ttrss_main .hl.active .hl-content a.title { color: #444 }

.header .title a,
#toolbar-frame #toolbar,
#toolbar-frame #toolbar #feed_title a,
body.ttrss_main #toolbar-frame #toolbar #selected_prompt,
div.cdm.expanded.Unread div.header a.title,
div.cdm.expanded.Unread div.content,
div.cdm.expandable.Unread div.header a.title,
body.ttrss_main .hl.Unread div.title a,
body.ttrss_main .hl.active div.title span,
body.ttrss_main .hl.active.Unread div.title a { color: #555 }

div#floatingTitle a.title,
div#floatingTitle.Unread a.title,
body.ttrss_main .hl div.title a,
div.cdm.active.Unread div.content,
div.cdm.expanded div.header a.title,
div.cdm.expanded.Unread.active div.header a.title,
div.cdm.expandable.Unread.active div.header a.title { color: #777 }

div.cdm.expandable div.header a.title,
body.ttrss_main .hl:not(.Unread) .hl-content a.title,
body.ttrss_main #headlines-frame div.feed-title a.title { font-weight: normal }

body.ttrss_main #headlines-frame pre,
body.ttrss_main .dijitContentPane pre { font-size: 1em }

.header .title a,
body.ttrss_main .hl.Unread div.title a,
div.cdm.expanded div.header a.title,
div.cdm.expandable.active div.header a.title,
div.cdm.expandable.Unread div.header a.title {
	font-weight: bold;
	letter-spacing: .001em;
}
	body.ttrss_main .hl div.title a span { letter-spacing: 0 }

div.cdm .footer {
	height: auto;
	min-height: 30px;
}

div.cdm.expanded .footer {
	padding: 0 3px 0 0;
	border: 0;
}

.dijitTabContainerTop-tabs .dijitTabChecked::before {
	background: #160 !important;
	filter: none;
}

.dijitAccordionInnerContainerSelected .dijitAccordionTitle { background: #909090 !important }

::selection { background: #ddd !important }
::-webkit-scrollbar-thumb { background: #ddd !important }

